*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6691 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-04  Assar Westerlund  <assar@sics.se>
+
+	* mini_inetd.c (listen_v4, listen_v6): handle the case of the
+ 	protocol not being supported
+
 1999-08-01  Assar Westerlund  <assar@sics.se>
 
 	* mini_inetd.c (socket_set_reuseaddr): remove duplicate
