*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6695 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-08-04  Assar Westerlund  <assar@sics.se>
+
+	* appl/test/gss_common.h: new prototypes
+
+	* appl/test/gssapi_client.c: use gss_err instead of abort
+
+	* appl/test/gss_common.c (gss_verr, gss_err): add
+
 1999-08-03  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/Makefile.am (n_fold_test_LDADD): need to set this
