--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -47,6 +47,8 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @email{michal@@karlin.mff.cuni.cz}
 @item Miroslav Ruda
 @email{ruda@@ics.muni.cz}
+@item Brian A May
+@email{bmay@@dgs.monash.edu.au}
 @item and we hope that those not mentioned here will forgive us.
 @end table
 
