--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,5 +1,7 @@
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
+	* roken-common.h: add shutdown constants
+
 	* mini_inetd.c (listen_v4, listen_v6): handle the case of the
  	protocol not being supported
 
