--- a/appl/su/ChangeLog
+++ b/appl/su/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-04  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: add libkafs
+
 1999-06-15  Assar Westerlund  <assar@sics.se>
 
 	* su.c (main): conditionalize `getlogin'
