*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6720 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/su/ChangeLog
+++ b/appl/su/ChangeLog
@@ -1,5 +1,8 @@
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
+	* su.c: add support for shadow passwords and rewrite some logic.
+  	From Miroslav Ruda <ruda@ics.muni.cz>
+
 	* Makefile.am: add libkafs
 
 1999-06-15  Assar Westerlund  <assar@sics.se>
