--- a/lib/auth/ChangeLog
+++ b/lib/auth/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-04  Assar Westerlund  <assar@sics.se>
+
+	* afskauthlib/verify.c: incorporate patches from Miroslav Ruda
+ 	<ruda@ics.muni.cz>
+
 Thu Apr  8 14:35:34 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* sia/sia.c: remove definition of KRB_VERIFY_USER (moved to
