--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-05  Assar Westerlund  <assar@sics.se>
+
+	* telnetd/sys_term.c (rmut): free utxp
+
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
 	* telnet/main.c: add -G and config file support.  From Miroslav
