--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-05  Assar Westerlund  <assar@sics.se>
+
+	* login.c (main): move down login incorrect to disallow account
+ 	guessing
+
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
 	* utmpx_login.c (utmpx_login): fix for Solaris.  From Miroslav
