--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,9 @@
+1999-08-05  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c: call freehostent
+
+	* rsh.c: remove some dead code
+
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
 	* rshd.c: re-write the handling of forwarded credentials and
