--- a/lib/editline/ChangeLog
+++ b/lib/editline/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-06  Assar Westerlund  <assar@sics.se>
+
+	* editline.c (TTYinfo): copy backspace string to avoid referencing
+ 	into a local variable.
+
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: don't run testit in `make check'
