*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6763 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-06  Assar Westerlund  <assar@sics.se>
+
+	* roken.h.in (sockaddr_storage): cater for those that have
+ 	v6-support also
+
 1999-08-05  Assar Westerlund  <assar@sics.se>
 
 	* inet_ntop.c (inet_ntop_v4): remember to call ntohl
