*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6766 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-07  Assar Westerlund  <assar@sics.se>
+
+	* shadow.c (check_shadow): check for a NULL sp
+
 1999-08-05  Assar Westerlund  <assar@sics.se>
 
 	* login.c (main): move down login incorrect to disallow account
