*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6794 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-08-12  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am (ACLOCAL): just use `cf', this variable is only used
+ 	when the current directory is $(top_srcdir) anyways and having
+ 	$(top_srcdir) there breaks if it's a relative path
+
 1999-08-09  Johan Danielsson  <joda@pdc.kth.se>
 
 	* configure.in: check for setproctitle
