--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-12  Johan Danielsson  <joda@pdc.kth.se>
+
+	* push.c: use XDELE
+
 1999-08-05  Assar Westerlund  <assar@sics.se>
 
 	* push.c (do_connect): v6-ify
