--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,5 +1,7 @@
 1999-08-12  Johan Danielsson  <joda@pdc.kth.se>
 
+	* pop_init.c (pop_init): don't freehostent if ch == NULL
+
 	* pop_dele.c: implement XDELE to delete a range of messages
 
 1999-08-05  Assar Westerlund  <assar@sics.se>
