--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,11 @@
+1999-08-13  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in: add md5crypt_test
+
+	* md5crypt_test.c: test md5 crypt
+
+	* fcrypt.c: always enable md5 crypt
+
 1999-07-26  Johan Danielsson  <joda@pdc.kth.se>
 
 	* Makefile.am: bump version number (changes to md*, sha)
