--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,5 +1,7 @@
 1999-08-13  Assar Westerlund  <assar@sics.se>
 
+	* Makefile.am: add md5crypt_test
+
 	* Makefile.in: add md5crypt_test
 
 	* md5crypt_test.c: test md5 crypt
