--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-14  Johan Danielsson  <joda@pdc.kth.se>
+
+	* fcrypt.c (crypt_md5): don't use snprintf
+
 1999-08-13  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: add md5crypt_test
