*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6820 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-16  Assar Westerlund  <assar@sics.se>
+
+	* common.c (do_read): be careful with the return value from
+ 	krb5_net_read
+
 1999-08-05  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c: call freehostent
