*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6839 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-19  Assar Westerlund  <assar@sics.se>
+
+	* kxd.c (recv_conn): give better error message
+	(doit_active): don't die if fork gives EAGAIN
+
 1999-07-12  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: handle not building X programs
