--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-19  Assar Westerlund  <assar@sics.se>
+
+	* push.c (doit): remember to step over the error message when we
+ 	discover that XDELE is not supported
+
 1999-08-12  Johan Danielsson  <joda@pdc.kth.se>
 
 	* push.c: use XDELE
