start describing changes to 0.1n
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6858 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in release 0.1n:
+
+ * v6-ify the remaining programs.
+ * add `ank --random-password' and `cpw --random-password' in kadmin
+ * bug fixes
+
 Changes in release 0.1m:
 
  * support for getting default from krb5.conf for kinit/kf/rsh/telnet.
