--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-09-10  Assar Westerlund  <assar@sics.se>
+
+	* kpasswd/kpasswdd.c: move out password quality functions
+
 1999-09-07  Assar Westerlund  <assar@sics.se>
 
 	* lib/hdb/Makefile.am (libhdb_la_SOURCES): add keytab.c.  From
