--- a/kadmin/ChangeLog
+++ b/kadmin/ChangeLog
@@ -1,5 +1,7 @@
 1999-09-10  Assar Westerlund  <assar@sics.se>
 
+	* init.c (init): also create `changepw/kerberos'
+
 	* version4.c: only create you loose packets when we fail decoding
  	and not when an operation is not performed for some reason
 	(decode_packet): read the service key from the hdb
