--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Changes in release 0.1n:
 
+ * implement a keytab backend for v4 srvtabs
+ * implement `ktutil copy'
  * support password quality control in v4 kadmind
  * improvements in v4 compat kadmind
  * v6-ify the remaining programs.
