*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6946 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Changes in release 0.1n:
 
+ * implmenet a keytab backend for AFS KeyFile's
  * implement a keytab backend for v4 srvtabs
  * implement `ktutil copy'
  * support password quality control in v4 kadmind
