*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6949 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-09-13  Assar Westerlund  <assar@sics.se>
+
+	* kdc/hpropd.c (main): remove bogus error with `--print'.  remove
+ 	sysloging of number of principals transferred
+
+	* kdc/hprop.c (ka_convert): set flags correctly for krbtgt/CELL
+ 	principals
+	(main): get rid of bogus opening of hdb database when propagating
+	ka-server database
+
 1999-09-12  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/krb5_locl.h (O_BINARY): add fallback definition
