--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,8 @@
+1999-09-16  Assar Westerlund  <assar@sics.se>
+
+ 	* strcpy_truncate.c (strcpy_truncate): change return value to be
+ 	the length of `src'
+
 1999-08-16  Assar Westerlund  <assar@sics.se>
 
 	* getcap.c: try to make this work on systems with DB
