*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6981 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,5 +1,15 @@
 1999-09-16  Assar Westerlund  <assar@sics.se>
 
+	* strlcpy.c: update name and prototype
+
+	* strlcat.c: update name and prototype
+
+	* roken.h.in: rename strc{py,at}_truncate to strlc{py,at}
+
+	* Makefile.am: rename strc{py,at}_truncate -> strlc{py,at}
+
+	* Makefile.in: rename strc{py,at}_truncate -> strlc{py,at}
+
  	* strcpy_truncate.c (strcpy_truncate): change return value to be
  	the length of `src'
 
