strc{py,at}_truncate -> strlc{py,at}
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6983 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,5 +1,7 @@
 1999-09-16  Assar Westerlund  <assar@sics.se>
 
+	* strlcat.c (strlcat): call strlcpy
+
 	* strlcpy.c: update name and prototype
 
 	* strlcat.c: update name and prototype
