--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-09-20  Assar Westerlund  <assar@sics.se>
+
+	* rshd.c (recv_krb4_auth): set `iv'
+
 1999-08-16  Assar Westerlund  <assar@sics.se>
 
 	* common.c (do_read): be careful with the return value from
