*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6997 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-09-21  Assar Westerlund  <assar@sics.se>
+
+	* lib/asn1/Makefile.am: add asn1_print
+
+	* lib/asn1/asn1_print.c: new program for printing DER-structures
+
+	* lib/asn1/der_put.c: make functions more consistent
+
+	* lib/asn1/der_get.c: make functions more consistent
+
 1999-09-16  Assar Westerlund  <assar@sics.se>
 
 	* configure.in: test for strlcpy, strlcat
